# ParserGen

./: README.md  config.py  nodes.py  parser.py  production.py  setup.cfg  test.py  text
grammarBased/: common.py  entities.py  parser.py  test.py
src/parser_gen/: nodes.py
src/parser_gen/grammar_based/: __init__.py  common.py  config.py  entities.py  lib.py  nodes.py  parser.py  production.py
src/parser_gen/template_based/: parser.py
tests/AVBP/: avbpParser.py
tests/AVTP/: avtp.out  avtpHeaderParser.py  avtpParser.py  sub_avtp.out
tests/grammar_based/AVBP/: avbpParser.py
tests/grammar_based/json/: jsonParser.py  test.json
tests/grammar_based/ms_thermo/: specieParser.py
tests/json/: jsonParser.py
tests/ms_thermo/: specieParser.py  test.py
tests/template_based/PoC/: parser.py  template.txt  text.txt
tests/template_based/eilmer/: cone20.config  cone20.control  cone20.times  slurm-1.out  slurm-2.out  slurm-template.txt  slurmParser.py
tests/template_based/runParams/: run-1.params  run-2.params  run-3.params
