[metadata]
name = parser_gen
version = attr: parser_gen.__version__
author = Eloi Demolis
author_email = coop@cerfacs.fr
description = Parser generator
long_description = file: README.md
url = https://github.com/Wonshtrum/ParserGen
project_urls =
	Bug Tracker = https://github.com/Wonshtrum/ParserGen/issues
classifiers = 
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
package_dir = 
	= src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
